--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="forgot_password">Forgot Password?</string>
     <string name="or">Or</string>
     <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
+    <string name="sign_up">Register</string>
 </resources>
